# seafile-shell-ext

./: .gitignore
common/: ext-common.h  ext-utils.cpp  log.cpp
extensions/: CMakeLists.txt  commands.cpp  commands.h  ext-config.h
seadrive-thumbnail-ext/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  README.md  RecipeThumbnailProvider.cpp  RecipeThumbnailProvider.h  SeadriveThumbnailProvider.cpp  SeadriveThumbnailProvider.h  applet-connection.cpp  build.sh  commands.cpp  commands.h  dllmain.cpp  ext-comm.h  ext-config.h  ext-utils.cpp  ext-utils.h  log.cpp  provider.cpp
shellext-thumbnail-plugin/: CMakeLists.txt  README.md  applet-connection.cpp  applet-connection.h  cleanthumbnail.bat  commands.cpp  commands.h  ext-comm.h  ext-utils.cpp  ext-utils.h
shellext-thumbnail-plugin/src/: ClassFactory.cpp  ClassFactory.h  ExportFunctions.def  RecipeThumbnailProvider.cpp  RecipeThumbnailProvider.h  Reg.cpp  Reg.h  dllmain.cpp  log.cpp  log.h  macro.h
